# ft_turing

./: .gitignore  Makefile  README.md  TESTS.md  ft-turing.cabal  gen_utm.py  turing.cabal
app/: Complexity.hs  Executor.hs  Machine.hs  Main.hs  ParsedMachine.hs
scripts/: gen_utm.py  utmify_machine.py
tests/: TestExecution.hs  TestParsing.hs  executionResult_Main.hs  parsingTest_Machine.hs  test_Machine.hs  unarySubTest_Main.hs
tests/resources/ambiguous/: buggy_and.json
tests/resources/chars/: 0to2n_chars.json  unary_add_chars.json
tests/resources/invalid/: parsing_error_list.json  parsing_error_missing_bracket.json  parsing_error_missing_keys2.json  parsing_error_name_not_string.json  parsing_error_string.json  parsing_error_typo_key.json  parsing_error_unexpected_keys.json  validation_error_alphabet_len.json  validation_error_blank_not_in_alphabet.json  validation_error_finals_duplicates.json  validation_error_state_initial_not_in_states.json  validation_error_transition_mutliple_errors.json  validation_error_transition_unknow_state.json
tests/resources/json/: parsing_error_missing_keys.json  parsing_error_transition_to_state_empty.json  validation_error_alphabet_contains_non_1_char_string.json  validation_error_alphabet_not_unique.json  validation_error_blank_is_empty.json  validation_error_finals_equal_initial.json  validation_error_name_empty.json  validation_error_state_finals_empty.json  validation_error_state_finals_not_in_states.json  validation_error_state_name_duplicates.json  validation_error_state_name_empty.json  validation_error_states_len.json  validation_error_transition_action_not_left_or_right.json  validation_error_transition_ambiguous_read.json  validation_error_transition_one_and_uncovered_finals.json  validation_error_transition_read_not_from_alphabet.json  validation_error_transition_to_state_should_be_in_states.json  validation_error_transition_uncovered_finals.json  validation_error_transition_write_not_from_alphabet.json
tests/resources/valid/: binary_and.json  binary_not.json  unary_add.json  unary_inc.json  universal_turing_machine.json  utm10.json  utm2.json  utm4.json
