cabal-version: 3.0
name:          ft-turing
version:       1
author:        amyroshn and axbrisse
maintainer:    amyroshn@student.42.fr and axbrisse@student.42.fr
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_turing
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , text
    , unordered-containers
