cabal-version: 3.0
name:          ft-turing
version:       1
author:        amyroshn and axbrisse
maintainer:    amyroshn@student.42.fr and axbrisse@student.42.fr
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_turing
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Complexity
    Executor
    Machine
    ParsedMachine

  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , optparse-applicative
    , random
    , random-shuffle
    , text
    , unordered-containers

test-suite parsing-tests
  type:           exitcode-stdio-1.0
  main-is:        TestParsing.hs
  hs-source-dirs: app tests
  other-modules:
    Machine
    ParsedMachine

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , filepath
    , hspec
    , HUnit
    , process
    , text
    , unordered-containers

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite execute-tests
  type:           exitcode-stdio-1.0
  main-is:        TestExecution.hs
  hs-source-dirs: app tests
  other-modules:
    Executor
    Machine
    ParsedMachine

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , filepath
    , hspec
    , HUnit
    , optparse-applicative
    , process
    , text
    , unordered-containers

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
