cabal-version:      3.0

-- The name of the package.
name:               ft-turing

-- The package version.
version:            1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            Apache-2.0

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             amyroshn and axbrisse

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         amyroshn@student.42.fr and axbrisse@student.42.fr

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ft_turing
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Machine

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

    build-depends:       base >=4.7 && <5
                        , aeson
                        , bytestring
                        , aeson-pretty
                        , text
                        , containers
                        , unordered-containers

test-suite test-main-args-errors
    other-modules:    Machine
    type:              exitcode-stdio-1.0
    main-is:           test_Machine.hs
    hs-source-dirs:    tests, app
    build-depends:     base, HUnit, process, hspec, aeson
                        , bytestring
                        , aeson-pretty
                        , text
                        , containers
                        , unordered-containers
                        , filepath
    default-language:  Haskell2010
