cabal-version:   3.0
name:            ft-turing
version:         1
license:         Apache-2.0
author:          amyroshn and axbrisse
maintainer:      amyroshn@student.42.fr and axbrisse@student.42.fr
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable ft_turing
  import:           warnings
  main-is:          Main.hs
  other-modules:    Machine
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base                  >=4.7 && <5
    , bytestring
    , containers
    , text
    , unordered-containers

test-suite test-main-args-errors
  other-modules:    Machine
  type:             exitcode-stdio-1.0
  main-is:          test_Machine.hs
  hs-source-dirs:   tests app
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , filepath
    , hspec
    , HUnit
    , process
    , text
    , unordered-containers

  default-language: Haskell2010
